[package]
name = "an2linuxserver"
version = "0.1.0"
authors = ["rusty <rusty@spoqa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
configparser = "2.0.0"
dirs = "3.0.1"
image = "0.23.13"
regex = "1.4.3"
ring = "0.16.20"
rustls-pemfile = "0.2.0"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
structopt = "0.3.21"
webpki = "0.21.4"
x509-signature = "0.5.0"

[dependencies.notify-rust]
git = "https://github.com/skystar-p/notify-rust"
branch = "image_rgba"
features = ["z", "images"]
default-features = false
